<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_blue"
    android:padding="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_blue"
        android:orientation="vertical">

        <TextView
            android:id="@+id/v001_register_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/h10"
            android:layout_marginTop="@dimen/h10"
            android:text="@string/txt_title"
            android:textSize="@dimen/text_size_24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/v001_register_compCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:ems="10"
            android:hint="@string/hint_compCode"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/v001_register_compName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_weight="1"
            android:hint="@string/hint_compName" />

        <EditText
            android:id="@+id/v001_register_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:ems="10"
            android:hint="@string/hint_Email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/v001_register_Address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:ems="10"
            android:hint="@string/hint_Addres"
            android:inputType="textPostalAddress" />

        <EditText
            android:id="@+id/v001_register_Phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:ems="10"
            android:hint="@string/hint_Phone"
            android:inputType="phone" />

        <EditText
            android:id="@+id/v001_register_UserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:ems="10"
            android:hint="@string/hint_UserName"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/v001_register_PassWord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:ems="10"
            android:hint="@string/hint_PassWord"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/v001_register_Repeat_PassWord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:ems="10"
            android:hint="@string/hint_repeat_password"
            android:inputType="textPassword" />

        <!--  <Button
              android:id="@+id/v001_register_btn_Register"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="@dimen/margin_10"
              android:text="@string/btn_Register" />-->
        <LinearLayout
            android:id="@+id/v001_register_btn_Register"
            android:layout_width="match_parent"
            android:layout_height="@dimen/h50"
            android:layout_marginTop="@dimen/h20"
            android:background="@drawable/background_button_blue"
            android:layout_marginBottom="@dimen/h30"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_Register"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_18sp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
