<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_blue"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/v001_login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/h10"
            android:layout_marginTop="@dimen/h10"
            android:text="@string/login_txt_title"
            android:textSize="@dimen/text_size_24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">
        <EditText
            android:id="@+id/v001_txt_login_compcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_compCode">
        </EditText>


        <EditText
            android:id="@+id/v001_txt_login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/h10"
            android:hint="@string/login_hint_username">
        </EditText>


        <EditText
            android:id="@+id/v001_txt_login_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/h10"
            android:ems="10"
            android:hint="@string/login_hint_password"
            android:inputType="textPassword" />

        <CheckBox
            android:id="@+id/v001_login_chk_savePass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/h10"
            android:text="@string/login_chk_save_pass"
            android:checked="false" />

        <LinearLayout
            android:id="@+id/v001_login_btn_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/h50"
            android:layout_marginTop="@dimen/h60"
            android:background="@drawable/background_button_blue"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_btn_login"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_18sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/v001_login_Forget_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/h10"
            android:text="@string/login_txt_forget_pass"
            android:textColor="@color/blue"
            android:textStyle="italic" />
    </LinearLayout>

</LinearLayout>
